src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ability_to_Modify_Pricing_Structure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ability to Modify Pricing Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Access_Profile__c</fullName>
        <label>Access Profile</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allergies__c</fullName>
        <label>Allergies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Billable_Hours_Goal__c</fullName>
        <label>Annual Billable Hours Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Salary__c</fullName>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assistant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact employé</value>
            </filterItems>
            <filterItems>
                <field>Contact.Assistant_box__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Assistant)</relationshipLabel>
        <relationshipName>Assistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assistant_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_Type__c</fullName>
        <label>Blood Type</label>
        <picklist>
            <picklistValues>
                <fullName>AB négatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB positif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A négatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A positif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B négatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B positif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O négatif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O positif</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commentaires_contacts_FM__c</fullName>
        <description>POur les commentaires provenant de la base de données FM</description>
        <label>Commentaires contacts FM</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Hire__c</fullName>
        <label>Date of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate_Investigator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delegate Investigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_Group_Insurance__c</fullName>
        <label>Dental Group Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famillial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusé</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <displayFormat>E-{0000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Envois__c</fullName>
        <label>Envois</label>
        <picklist>
            <controllingField>Statut_contact__c</controllingField>
            <picklistValues>
                <fullName>Bulletins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartes de Noël</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25 ième</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fax_personnel__c</fullName>
        <label>Fax personnel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Chimie et génie chimique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Génie civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Génie électrique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Génie environnemental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Génie matériaux/métallurgie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Génie mécanique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incendie et explosion</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Holidays_Allowed__c</fullName>
        <label>Holidays Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_CDN__c</fullName>
        <label>Hourly Rate CDN</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate_USD__c</fullName>
        <label>Hourly Rate USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hourly_Wage__c</fullName>
        <label>Hourly Wage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hours_Available_Annually__c</fullName>
        <label>Hours Available Annually</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Worked_Per_Week__c</fullName>
        <label>Hours Worked Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGD__Collection_Id__c</fullName>
        <label>Collection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Immediate Supervisor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact employé</value>
            </filterItems>
            <filterItems>
                <field>Contact.Superior__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <label>Initials</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution_Number__c</fullName>
        <label>Institution Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <picklist>
            <picklistValues>
                <fullName>AFAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Théâtre</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the contact</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Anglais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Espagnol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Francais</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infographie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secrétariat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technologue de laboratoire</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Group_Insurance__c</fullName>
        <label>Medical Group Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Couple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Famillial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refusé</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medication__c</fullName>
        <label>Medication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAS__c</fullName>
        <label>NAS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_ro_de_Contact_Contact_Number__c</fullName>
        <externalId>true</externalId>
        <label>CEP Numéro de Contact / Contact Number</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Non_Billable_Hours__c</fullName>
        <label>Number of Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trials_Won__c</fullName>
        <label>Number of Trials Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Trials__c</fullName>
        <label>Number of Trials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Vacation_Days__c</fullName>
        <label>Number of Vacation Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Creator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organization Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poste__c</fullName>
        <description>Extension téléphonique</description>
        <label>Poste</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cellulaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courriel primaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courriel secondaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Télécopieur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Téléphone</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Profil_Tremplin__c</fullName>
        <description>Type d&apos;approche client selon la méthode «Tremplin»</description>
        <inlineHelpText>Type d&apos;approche client selon la méthode «Tremplin»</inlineHelpText>
        <label>Profil Tremplin</label>
        <picklist>
            <picklistValues>
                <fullName>Indéterminé</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amiable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expressif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meneur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responsible_of_the_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Responsible of the Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_End__c</fullName>
        <label>Schedule End</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Start__c</fullName>
        <label>Schedule Start</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statut_contact__c</fullName>
        <label>Statut</label>
        <picklist>
            <picklistValues>
                <fullName>Actif</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactif</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Superior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Superior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titre_professionnel__c</fullName>
        <label>Titre professionnel</label>
        <picklist>
            <picklistValues>
                <fullName>Autre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ing.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P.Eng</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Transit_Number__c</fullName>
        <label>Transit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Vacation__c</fullName>
        <label>% of Vacation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AVIVA_contacts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Language__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>AVIVA</value>
        </filters>
        <label>AVIVA contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllCEP</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Poste__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE4</columns>
        <columns>Titre_professionnel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>CEP</value>
        </filters>
        <label>Personnel CEP</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>Allcontacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Poste__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Tous les contacts</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Derni_res_modifications</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Poste__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Dernières modifications</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Contact_Organisation</fullName>
        <active>true</active>
        <label>Contact Organisation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_employe</fullName>
        <active>true</active>
        <label>Contact employé</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_sure_First_Name_if_filled_out</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please make sure First Name is filled out.</errorMessage>
    </validationRules>
</CustomObject>